# b2NER

./: README.md  pyproject.toml
datasets/flair/: dev.txt  test.txt  train.txt
datasets/processed/: econodata_prompt_response_json.csv  incremented_data.csv  setores_amigaveis.csv
resources/taggers/ner-bertimbau/: best-model.pt  final-model.pt  logs.txt  loss.tsv
src/: .gitignore
src/b2ner/: main.py  model_training.py
src/dataset_converter/: dataset_preprocessing.py  flair_converter.py  increment_dataset.py
src/utils/: cidades_nome_composto.py  constants.py  word_service.py
